examples/core/errors/syntax_recovery/01_trailing_operator.core.tao
// Syntax Recovery: Trailing operator
// The parser should recover after the unexpected + operator
// and potentially treat this as just the variable x
x +
